--- a/ganga-records/index.css
+++ b/ganga-records/index.css
@@ -5,8 +5,25 @@
 h1{ font-size: 3.5em;}
 h2{ font-size: 2.3em;}
 h3{ font-size: 2em;}
-p{ fon}
+p{ font-size: 1.25;}
+ul{ list-style: none;}
 
-body{
-    margin: 0;
+button{
+    font-size: 1.5;
+    font-weight: bold;
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: 1px solid rgba(0, 0, 0, 0);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+    color: greenyellow;
+    background-color: blueviolet;
+}
+
+button:hover{
+    background-color: rgb(100, 47, 150);
+}
+
+.container{
+    max-width: 1400px;
+    margin: auto;
 }
