--- a/ganga-records/index.css
+++ b/ganga-records/index.css
@@ -1,3 +1,8 @@
+body{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+}
+
 *{
     box-sizing: border-box;
 }
@@ -5,25 +10,76 @@
 h1{ font-size: 3.5em;}
 h2{ font-size: 2.3em;}
 h3{ font-size: 2em;}
-p{ font-size: 1.25;}
+p{ font-size: 1.25em;}
 ul{ list-style: none;}
 
 button{
     font-size: 1.5;
-    font-weight: bold;
+    font-weight: bolder;
     padding: 10px 20px;
     border-radius: 10px;
     border: 1px solid rgba(0, 0, 0, 0);
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-    color: greenyellow;
-    background-color: blueviolet;
+    color: rgb(136, 255, 0);
+    background-color: rgb(136, 40, 226);
 }
 
 button:hover{
     background-color: rgb(100, 47, 150);
 }
 
+
+
 .container{
     max-width: 1400px;
     margin: auto;
+}
+
+header{
+    background-color: rgb(245,245,245);
+
+}
+
+header .logo{
+    margin: 0;
+    padding: 25px 30px;
+    font-weight: bold;
+    color: blueviolet;
+    font-size: 1.45em;
+}
+
+header .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+header nav{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding-bottom: 25px;
+
+}
+
+header a{
+    padding: 5px 12px;
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+
+}
+
+header a:hover{
+    color: blueviolet;
+}
+
+#hero{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    height: 90vh;
+    background-image: url("imagenes/DSC04281.jpg");
 }
